--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,152 @@
 <!DOCTYPE html>
 <html>
-    <head>
+<body class="homepage">
+
+<!-- Header Wrapper -->
+<div id="header-wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="12u">
+                <!-- header -->
+                <section id="header">
+                    <h1><a href="#">Team BBailey</a></h1>
+
+                    <!-- nav -->
+                    <nav id="nav">
+                        <ul>
+                            <li class="current_page_item"><a href="index.html">Home</a></li>
+                            <li><a href="#">Blog Posts</a></li>
+                        </ul>
+                    </nav>
+                </section>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="12u">
+                <!-- banner -->
+                <section id="banner">
+                    <a href="#">
+                        <span class="image image-full"><img src="images/me_01.jpg" alt=""></span>
+                        <header>
+                            <span class="byline">A little insight into my world</span>
+                        </header>
+                    </a>
+                </section>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<!-- Main Wrapper -->
+<div id="main-wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="12u">
+                <header class="major">
+                    <h2>My Story</h2>
+                </header>
+                {{ content }}
+            </div>
+        </div>
+    </div>
+</div> <!-- Main Wrapper -->
+
+
+
+<!-- footer wrapper -->
+<div id="footer-wrapper">
+    <!-- footer -->
+    <section id="footer" class="container">
+        <div class="row">
+            <div class="8u">
+                <section>
+                    <header>
+                        <h2>Footer Section</h2>
+                    </header>
+                    <ul class="dates">
+                        <!-- list items for blog posts -->
+                    </ul>
+                </section>
+            </div>
+            <div class="4u">
+                <section>
+                    <header>
+                        <h2>What my site stands for?</h2>
+                        <a href="#" class="image image-full"><img src="images/pic_na.jpg" alt=""></a>
+                        <p>
+                            This is a site that tries to represent Brandon Bailey as best it can.
+                        </p>
+                    </header>
+                </section>
+            </div>
+        </div>
+    </section>
+
+    <div class="row">
+        <div class="4u">
+            <section>
+                <header>
+                    <h2>My Projects</h2>
+                </header>
+                <ul class="divided">
+                    <li><a href="#">Project 1</a></li>
+                    <li><a href="#">Project 2</a></li>
+                    <li><a href="#">Project 3</a></li>
+                </ul>
+            </section>
+        </div>
+        <div class="4u">
+            <section>
+                <header>
+                    <h2>Placeholder 2</h2>
+                </header>
+                <ul class="divided">
+                    <li><a href="#">Placeholder1</a></li>
+                    <li><a href="#">Placeholder2</a></li>
+                    <li><a href="#">Placeholder3</a></li>
+                </ul>
+
+            </section>
+        </div>
+        <div class="row">
+            <div class="4u">
+                <section>
+                    <header>
+                        <h2>Placeholder 3</h2>
+                    </header>
+                    <ul class="divided">
+                        <li><a href="#">Placeholder1</a></li>
+                        <li><a href="#">Placeholder2</a></li>
+                        <li><a href="#">Placeholder3</a></li>
+                    </ul>
+                </section>
+            </div>
+        </div>
+
+    </div>
+
+    <!--<div class="footer">-->
+    <!--<div class="contact">-->
+    <!--<p>-->
+    <!--Your Name<br />-->
+    <!--What You Are<br />-->
+    <!--you@example.com-->
+    <!--</p>-->
+    <!--</div>-->
+    <!--<div class="contact">-->
+    <!--<p>-->
+    <!--<a href="https://github.com/yourusername">github.com/yourusername</a><br />-->
+    <!--<a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />-->
+    <!--</p>-->
+    <!--</div>-->
+    <!--</div>-->
+</div>
+
+</body>
+<head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
@@ -30,63 +176,4 @@
         <![endif]>-->
 
     </head>
-    <body class="homepage">
-
-        <!-- Header Wrapper -->
-        <div id="header-wrapper">
-            <div class="container">
-                <div class="row">
-                    <div class="12u">
-                        <!-- header -->
-                        <section id="header">
-                                <h1><a href="#">Team BBailey</a></h1>
-
-                            <!-- nav -->
-                            <nav id="nav">
-                                <ul>
-                                    <li class="current_page_item"><a href="index.html">Home</a></li>
-                                    <li><a href="#">Blog Posts</a></li>
-                                </ul>
-                            </nav>
-                        </section>
-
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="12u">
-                        <!-- banner -->
-                        <section id="banner">
-                            <a href="#">
-                                <span class="image image-full"><img src="images/me_01.jpg" alt=""></span>
-                                <header>
-                                    <span class="byline">A little insight into my world</span>
-                                </header>
-                            </a>
-                        </section>
-                    </div>
-                </div>
-
-            </div>
-
-          {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
-        </div>
-
-    </body>
 </html>
