WIP main content area and blog posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,36 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width">
+
+    <!-- syntax highlighting CSS
+    <link rel="stylesheet" href="/css/syntax.css"> -->
+
+    <!-- Custom CSS
+    <link rel="stylesheet" href="/css/main.css"> -->
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900,300italic" rel="stylesheet" />
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.droptron.min.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/skel-panels.min.js"></script>
+
+    <noscript>
+        <link rel="stylesheet" href="css/skel-noscript.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="css/style-desktop.css"/>
+    </noscript>
+
+    <!--[if lte IE 8]/>
+        <script src="js/html5shiv.js></script><link rel="stylesheet" href="css/ie8.css" />
+    <![endif]>-->
+
+</head>
+
 <body class="homepage">
 
 <!-- Header Wrapper -->
@@ -48,6 +79,23 @@
                 <header class="major">
                     <h2>My Story</h2>
                 </header>
+
+                <p>
+
+
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed risus erat. Mauris rutrum ligula et ipsum imperdiet, id vulputate elit rutrum. In ornare turpis in turpis semper, non pretium erat interdum. Ut semper vel orci at malesuada. Proin non dui nec nulla vestibulum aliquam quis id magna. Sed ipsum tortor, malesuada et augue eget, dignissim imperdiet lorem. Proin eleifend porta magna sed interdum. Curabitur varius orci a diam sagittis faucibus. Nullam risus odio, pretium a diam et, commodo pellentesque mauris. Pellentesque mattis mauris ut placerat pharetra. Aliquam erat volutpat. Nam aliquet orci non turpis laoreet, sed commodo dolor lobortis. Duis varius aliquet neque ac tristique. Donec turpis turpis, molestie quis leo quis, adipiscing tincidunt lorem. Proin et lacus sit amet purus egestas fringilla id at massa.
+
+                    Pellentesque placerat interdum tempor. Nunc pharetra diam non auctor posuere. Fusce blandit auctor mi, ut pulvinar elit tempor quis. Donec interdum, magna id blandit iaculis, neque diam rhoncus velit, vel euismod tellus elit a dolor. Nullam bibendum odio at malesuada fermentum. Cras in blandit mi. Ut sit amet metus dui. Suspendisse posuere feugiat facilisis. Nullam ut enim et tortor sollicitudin scelerisque non ut mauris. Vestibulum tincidunt dapibus lectus, nec ultricies velit facilisis vitae. Aenean faucibus neque eu gravida auctor. Praesent tempus eros ac urna tincidunt, ut tincidunt eros mollis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non neque malesuada, mattis ante a, laoreet felis.
+
+                    Quisque nunc nibh, rhoncus nec tortor vitae, mattis blandit metus. Quisque mollis ut erat in aliquet. Sed tincidunt velit vel luctus convallis. Vestibulum vel elit eget quam dictum volutpat. Fusce eget convallis sapien. Praesent porttitor molestie massa sit amet scelerisque. Vestibulum gravida vitae nulla vitae semper. Nulla et odio aliquam, venenatis purus ac, egestas dolor. Fusce tincidunt tristique arcu, nec convallis mi rhoncus at. Donec tortor mauris, condimentum sit amet aliquam vitae, pretium at sapien.
+
+                    Sed tempor nisl ut lectus aliquet placerat. Cras adipiscing molestie ornare. Fusce tortor eros, facilisis ut leo vitae, suscipit condimentum ante. Curabitur porttitor augue eget purus gravida dapibus eu ut nisi. Pellentesque malesuada blandit ligula eget sagittis. Proin ac sollicitudin erat, quis ultrices ipsum. Nulla eget suscipit metus. Proin congue semper lobortis. Praesent nec imperdiet sem, vitae molestie nunc. Donec quis odio mi. Ut luctus mollis quam, adipiscing tincidunt sapien porta vitae. Donec varius at justo vitae rhoncus.
+
+                    Donec libero ligula, tempus a risus eget, ornare condimentum tellus. In non sagittis risus. Ut tempor arcu sed urna malesuada, vitae tincidunt dolor congue. Integer condimentum, augue at tempor interdum, erat nunc porttitor tortor, eu feugiat ligula nisl ut massa. Curabitur semper et magna molestie pellentesque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc euismod bibendum mi tincidunt suscipit.
+                </p>
+
+            </div>
+            <div class="12u">
                 {{ content }}
             </div>
         </div>
@@ -146,34 +194,5 @@
 </div>
 
 </body>
-<head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS
-        <link rel="stylesheet" href="/css/syntax.css"> -->
-
-        <!-- Custom CSS
-        <link rel="stylesheet" href="/css/main.css"> -->
-        <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900,300italic" rel="stylesheet" />
-
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery.droptron.min.js"></script>
-        <script src="js/config.js"></script>
-        <script src="js/skel.min.js"></script>
-        <script src="js/skel-panels.min.js"></script>
-
-        <noscript>
-            <link rel="stylesheet" href="css/skel-noscript.css"/>
-            <link rel="stylesheet" href="css/style.css"/>
-            <link rel="stylesheet" href="css/style-desktop.css"/>
-        </noscript>
-
-        <!--[if lte IE 8]/>
-            <script src="js/html5shiv.js></script><link rel="stylesheet" href="css/ie8.css" />
-        <![endif]>-->
-
-    </head>
 </html>
