blog section created, update image to smaller image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{ page.title }}</title>
@@ -15,182 +15,197 @@
     <script src="js/skel-panels.min.js"></script>
 
     <noscript>
-        <link rel="stylesheet" href="css/skel-noscript.css"/>
-        <link rel="stylesheet" href="css/style.css"/>
-        <link rel="stylesheet" href="css/style-desktop.css"/>
+      <link rel="stylesheet" href="css/skel-noscript.css"/>
+      <link rel="stylesheet" href="css/style.css"/>
+      <link rel="stylesheet" href="css/style-desktop.css"/>
     </noscript>
 
     <!--[if lte IE 8]/>
-        <script src="js/html5shiv.js></script><link rel="stylesheet" href="css/ie8.css" />
+    <script src="js/html5shiv.js></script><link rel="stylesheet" href="css/ie8.css" />
     <![endif]>-->
 
-</head>
+  </head>
 
-<body class="homepage">
+  <body class="homepage">
 
-<!-- Header Wrapper -->
-<div id="header-wrapper">
-    <div class="container">
+    <!-- Header Wrapper -->
+    <div id="header-wrapper">
+      <div class="container">
         <div class="row">
-            <div class="12u">
-                <!-- header -->
-                <section id="header">
-                    <h1><a href="#">Team BBailey</a></h1>
+          <div class="12u">
+            <!-- header -->
+            <section id="header">
+            <h1><a href="#">Team BBailey</a></h1>
 
-                    <!-- nav -->
-                    <nav id="nav">
-                        <ul>
-                            <li class="current_page_item"><a href="index.html">Home</a></li>
-                            <li><a href="#">Blog Posts</a></li>
-                            <li><a href="#main-wrapper">My Story</a> </li>
-                            <li><a href="#footer-wrapper">What I stand for</a></li>
-                        </ul>
-                    </nav> <!-- nav -->
-                </section>
+            <!-- nav -->
+            <nav id="nav">
+            <ul>
+              <li class="current_page_item"><a href="index.html">Home</a></li>
+              <li><a href="#">Blog Posts</a></li>
+              <li><a href="#main-wrapper">My Story</a> </li>
+              <li><a href="#footer-wrapper">What I stand for</a></li>
+            </ul>
+            </nav> <!-- nav -->
+            </section>
           </div>
         </div>
 
         <div class="row">
-            <div class="12u">
-                <!-- banner -->
-                <section id="banner">
-                    <a href="#">
-                        <span class="image image-full"><img src="images/me.jpg" alt=""></span>
-                        <header>
-                            <span class="byline">A little insight into my world</span>
-                        </header>
-                    </a>
-                </section> <!-- banner -->
-            </div>
+          <div class="12u">
+            <!-- banner -->
+            <section id="banner">
+            <a href="#">
+              <span class="image image-full"><img src="images/me2.jpg" alt=""></span>
+              <header>
+              <span class="byline">A little insight into my world</span>
+              </header>
+            </a>
+            </section> <!-- banner -->
+          </div>
         </div>
 
-    </div>
-</div> <!-- header wrapper -->
+      </div>
+    </div> <!-- header wrapper -->
 
-<!-- Main Wrapper -->
-<div id="main-wrapper">
-    <div class="container">
+    <!-- Main Wrapper -->
+    <div id="main-wrapper">
+      <div class="container">
         <div class="row">
-            <div class="12u">
-                <header class="major">
-                    <h2>My Story</h2>
-                </header>
+          <div class="12u">
+            <section>
+              <header class="major">
+                <h2>My Story</h2>
+              </header>
 
+              <div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed risus erat. Mauris rutrum ligula et ipsum imperdiet, id vulputate elit rutrum. In ornare turpis in turpis semper, non pretium erat interdum. Ut semper vel orci at malesuada. Proin non dui nec nulla vestibulum aliquam quis id magna. Sed ipsum tortor, malesuada et augue eget, dignissim imperdiet lorem. Proin eleifend porta magna sed interdum. Curabitur varius orci a diam sagittis faucibus. Nullam risus odio, pretium a diam et, commodo pellentesque mauris. Pellentesque mattis mauris ut placerat pharetra. Aliquam erat volutpat. Nam aliquet orci non turpis laoreet, sed commodo dolor lobortis. Duis varius aliquet neque ac tristique. Donec turpis turpis, molestie quis leo quis, adipiscing tincidunt lorem. Proin et lacus sit amet purus egestas fringilla id at massa.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed risus erat. Mauris rutrum ligula et ipsum imperdiet, id vulputate elit rutrum. In ornare turpis in turpis semper, non pretium erat interdum. Ut semper vel orci at malesuada. Proin non dui nec nulla vestibulum aliquam quis id magna. Sed ipsum tortor, malesuada et augue eget, dignissim imperdiet lorem. Proin eleifend porta magna sed interdum. Curabitur varius orci a diam sagittis faucibus. Nullam risus odio, pretium a diam et, commodo pellentesque mauris. Pellentesque mattis mauris ut placerat pharetra. Aliquam erat volutpat. Nam aliquet orci non turpis laoreet, sed commodo dolor lobortis. Duis varius aliquet neque ac tristique. Donec turpis turpis, molestie quis leo quis, adipiscing tincidunt lorem. Proin et lacus sit amet purus egestas fringilla id at massa.
 
-                    Pellentesque placerat interdum tempor. Nunc pharetra diam non auctor posuere. Fusce blandit auctor mi, ut pulvinar elit tempor quis. Donec interdum, magna id blandit iaculis, neque diam rhoncus velit, vel euismod tellus elit a dolor. Nullam bibendum odio at malesuada fermentum. Cras in blandit mi. Ut sit amet metus dui. Suspendisse posuere feugiat facilisis. Nullam ut enim et tortor sollicitudin scelerisque non ut mauris. Vestibulum tincidunt dapibus lectus, nec ultricies velit facilisis vitae. Aenean faucibus neque eu gravida auctor. Praesent tempus eros ac urna tincidunt, ut tincidunt eros mollis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non neque malesuada, mattis ante a, laoreet felis.
+                Pellentesque placerat interdum tempor. Nunc pharetra diam non auctor posuere. Fusce blandit auctor mi, ut pulvinar elit tempor quis. Donec interdum, magna id blandit iaculis, neque diam rhoncus velit, vel euismod tellus elit a dolor. Nullam bibendum odio at malesuada fermentum. Cras in blandit mi. Ut sit amet metus dui. Suspendisse posuere feugiat facilisis. Nullam ut enim et tortor sollicitudin scelerisque non ut mauris. Vestibulum tincidunt dapibus lectus, nec ultricies velit facilisis vitae. Aenean faucibus neque eu gravida auctor. Praesent tempus eros ac urna tincidunt, ut tincidunt eros mollis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non neque malesuada, mattis ante a, laoreet felis.
 
-                    Quisque nunc nibh, rhoncus nec tortor vitae, mattis blandit metus. Quisque mollis ut erat in aliquet. Sed tincidunt velit vel luctus convallis. Vestibulum vel elit eget quam dictum volutpat. Fusce eget convallis sapien. Praesent porttitor molestie massa sit amet scelerisque. Vestibulum gravida vitae nulla vitae semper. Nulla et odio aliquam, venenatis purus ac, egestas dolor. Fusce tincidunt tristique arcu, nec convallis mi rhoncus at. Donec tortor mauris, condimentum sit amet aliquam vitae, pretium at sapien.
+                Quisque nunc nibh, rhoncus nec tortor vitae, mattis blandit metus. Quisque mollis ut erat in aliquet. Sed tincidunt velit vel luctus convallis. Vestibulum vel elit eget quam dictum volutpat. Fusce eget convallis sapien. Praesent porttitor molestie massa sit amet scelerisque. Vestibulum gravida vitae nulla vitae semper. Nulla et odio aliquam, venenatis purus ac, egestas dolor. Fusce tincidunt tristique arcu, nec convallis mi rhoncus at. Donec tortor mauris, condimentum sit amet aliquam vitae, pretium at sapien.
 
-                    Sed tempor nisl ut lectus aliquet placerat. Cras adipiscing molestie ornare. Fusce tortor eros, facilisis ut leo vitae, suscipit condimentum ante. Curabitur porttitor augue eget purus gravida dapibus eu ut nisi. Pellentesque malesuada blandit ligula eget sagittis. Proin ac sollicitudin erat, quis ultrices ipsum. Nulla eget suscipit metus. Proin congue semper lobortis. Praesent nec imperdiet sem, vitae molestie nunc. Donec quis odio mi. Ut luctus mollis quam, adipiscing tincidunt sapien porta vitae. Donec varius at justo vitae rhoncus.
+                Sed tempor nisl ut lectus aliquet placerat. Cras adipiscing molestie ornare. Fusce tortor eros, facilisis ut leo vitae, suscipit condimentum ante. Curabitur porttitor augue eget purus gravida dapibus eu ut nisi. Pellentesque malesuada blandit ligula eget sagittis. Proin ac sollicitudin erat, quis ultrices ipsum. Nulla eget suscipit metus. Proin congue semper lobortis. Praesent nec imperdiet sem, vitae molestie nunc. Donec quis odio mi. Ut luctus mollis quam, adipiscing tincidunt sapien porta vitae. Donec varius at justo vitae rhoncus.
 
-                    Donec libero ligula, tempus a risus eget, ornare condimentum tellus. In non sagittis risus. Ut tempor arcu sed urna malesuada, vitae tincidunt dolor congue. Integer condimentum, augue at tempor interdum, erat nunc porttitor tortor, eu feugiat ligula nisl ut massa. Curabitur semper et magna molestie pellentesque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc euismod bibendum mi tincidunt suscipit.
-                </p>
+                Donec libero ligula, tempus a risus eget, ornare condimentum tellus. In non sagittis risus. Ut tempor arcu sed urna malesuada, vitae tincidunt dolor congue. Integer condimentum, augue at tempor interdum, erat nunc porttitor tortor, eu feugiat ligula nisl ut massa. Curabitur semper et magna molestie pellentesque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc euismod bibendum mi tincidunt suscipit.
+                  </p>
+                </div
 
+              </section>
             </div>
-            <!-- <div class="12u">
-                {{ content }}
-            </div> -->
+              <div id="blog-posts" class="12u">
+                <!--    {{ content }} -->
+                <!-- Blog section -->
+                <section>
+                  <header class="major">
+                    <h2>My Blog Posts</h2>
+                  </header>
+                  <div class="row">
+                    <!-- the blog posts section -->
+                  </div>
+                </section>
+              </div>
+          </div>
         </div>
-    </div>
-</div> <!-- Main Wrapper -->
+      </div> <!-- Main Wrapper -->
 
-
-
-<!-- footer wrapper -->
-<div id="footer-wrapper">
-    <!-- footer -->
-    <section id="footer" class="container">
+      <!-- footer wrapper -->
+      <div id="footer-wrapper">
+        <!-- footer -->
+        <section id="footer" class="container">
         <div class="row">
-            <div class="8u">
-                <section>
-                    <header>
-                        <h2>Footer Section</h2>
-                    </header>
-                    <ul class="dates">
-                        <!-- list items for blog posts -->
-                    </ul>
-                </section>
-            </div>
-            <div class="4u">
-                <section>
-                    <header>
-                        <h2>What my site stands for?</h2>
-                        <a href="#" class="image image-full"><img src="images/pic_na.jpg" alt=""></a>
-                        <p>
-                            This is a site that tries to represent Brandon Bailey as best it can.
-                        </p>
-                    </header>
-                </section>
-            </div>
-        </div>
-    </section>
-
-    <div class="row">
-        <div class="4u">
+          <div class="8u">
             <section>
-                <header>
-                    <h2>My Projects</h2>
-                </header>
-                <ul class="divided">
-                    <li><a href="#">Project 1</a></li>
-                    <li><a href="#">Project 2</a></li>
-                    <li><a href="#">Project 3</a></li>
-                </ul>
-            </section>
-        </div>
-        <div class="4u">
-            <section>
-                <header>
-                    <h2>Placeholder 2</h2>
-                </header>
-                <ul class="divided">
-                    <li><a href="#">Placeholder1</a></li>
-                    <li><a href="#">Placeholder2</a></li>
-                    <li><a href="#">Placeholder3</a></li>
-                </ul>
+            <header>
+            <h2>Footer Section</h2>
+            </header>
+            <ul class="dates">
+              <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dolor turpis, vestibulum non dui vel, faucibus tempor sem. Nunc faucibus lacus quis porttitor interdum. Duis quis nunc diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris non erat aliquet, tristique ante quis, ullamcorper magna. Phasellus tincidunt, ligula in consequat sollicitudin, turpis velit convallis nisi, nec faucibus mi libero in neque. Curabitur accumsan lectus ac rutrum faucibus. Nam a diam sollicitudin nisl congue ultrices. Donec non odio dui.
 
+              Donec sollicitudin elit quis lorem sagittis suscipit. In faucibus sollicitudin nisl quis tristique. Sed eget metus ornare, luctus turpis nec, ornare massa. Suspendisse faucibus urna sed nulla commodo, ac tempus arcu egestas. Fusce hendrerit, felis id mattis porta, massa arcu luctus sem, ut imperdiet enim nibh id diam. Nam elementum diam non purus eleifend, et vulputate sapien laoreet. Integer et ornare metus. Suspendisse non metus id nunc rhoncus molestie eget et neque. Aenean adipiscing consectetur sem, quis tincidunt mauris adipiscing nec. Nam imperdiet massa sapien, nec lobortis ante mollis vitae. Donec tempus, risus nec rutrum pretium, nisl mi dignissim erat, eu ultrices neque odio id mi. Etiam a nulla non turpis sagittis mollis. Nunc condimentum ac nibh non dapibus. Quisque urna erat, egestas ultricies nunc quis, iaculis dapibus lectus. Nulla adipiscing massa eu enim mollis, interdum iaculis turpis tristique. Quisque feugiat, lacus ut pharetra tempor, quam neque viverra nisl, a congue dolor erat ut ipsum.
+              </p>
+            </ul>
             </section>
+          </div>
+          <div class="4u">
+            <section>
+            <header>
+            <h2>What my site stands for?</h2>
+            <a href="#" class="image image-full"><img src="images/pic_na.jpg" alt=""></a>
+            <p>
+            This is a site that tries to represent Brandon Bailey as best it can.
+            </p>
+            </header>
+            </section>
+          </div>
         </div>
+        </section>
+
         <div class="row">
+          <div class="4u">
+            <section>
+            <header>
+            <h2>My Projects</h2>
+            </header>
+            <ul class="divided">
+              <li><a href="#">Project 1</a></li>
+              <li><a href="#">Project 2</a></li>
+              <li><a href="#">Project 3</a></li>
+            </ul>
+            </section>
+          </div>
+          <div class="4u">
+            <section>
+            <header>
+            <h2>Placeholder 2</h2>
+            </header>
+            <ul class="divided">
+              <li><a href="#">Placeholder1</a></li>
+              <li><a href="#">Placeholder2</a></li>
+              <li><a href="#">Placeholder3</a></li>
+            </ul>
+
+            </section>
+          </div>
+          <div class="row">
             <div class="4u">
-                <section>
-                    <header>
-                        <h2>Placeholder 3</h2>
-                    </header>
-                    <ul class="divided">
-                        <li><a href="#">Placeholder1</a></li>
-                        <li><a href="#">Placeholder2</a></li>
-                        <li><a href="#">Placeholder3</a></li>
-                    </ul>
-                </section>
+              <section>
+              <header>
+              <h2>Placeholder 3</h2>
+              </header>
+              <ul class="divided">
+                <li><a href="#">Placeholder1</a></li>
+                <li><a href="#">Placeholder2</a></li>
+                <li><a href="#">Placeholder3</a></li>
+              </ul>
+              </section>
             </div>
+          </div>
+
         </div>
 
-    </div>
-
-    <div class="row">
-        <div class="12u">
+        <div class="row">
+          <div class="12u">
             <!-- loved ones who passed -->
             <div id="copyright">
-                <section>
-                    <header>
-                        <h2>
-                            My loved ones who moved on
-                        </h2>
-                    </header>
-                <ul class="links">
-                    <li>RIP Ranaldo Butler</li>
-                    <li>RIP Calrin Biles</li>
-                    <li>RIP Gerrod Wislon</li>
-                </ul>
-                </section>
+              <section>
+              <header>
+              <h2>
+                My loved ones who moved on
+              </h2>
+              </header>
+              <ul class="links">
+                <li>RIP Ranaldo Butler</li>
+                <li>RIP Calrin Biles</li>
+                <li>RIP Gerrod Wislon</li>
+              </ul>
+              </section>
             </div>
+          </div>
         </div>
-    </div>
-</div> <!-- footer wrapper -->
+      </div> <!-- footer wrapper -->
 
-</body>
+    </body>
 
-</html>
+  </html>
