--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,29 +31,13 @@
 <!-- Header Wrapper -->
 <div id="header-wrapper">
     <div class="container">
-        <div class="row">
-            <div class="12u">
-                <!-- header -->
-                <section id="header">
-                    <h1><a href="#">Team BBailey</a></h1>
-
-                    <!-- nav -->
-                    <nav id="nav">
-                        <ul>
-                            <li class="current_page_item"><a href="index.html">Home</a></li>
-                            <li><a href="#">Blog Posts</a></li>
-                            <li><a href="#main-wrapper">My Story</a></li>
-                            <li><a href="#footer-wrapper">What I stand for</a></li>
-                        </ul>
-                    </nav>
-                    <!-- nav -->
-                </section>
-            </div>
-        </div>
-
-{%include hero.html%}
-
+      {%include header.html%}
     </div>
+
+{% if page.url == '/index.html' %}
+    {%include hero.html%}
+{% endif %}
+
 </div>
 <!-- header wrapper -->
 
