--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,12 +2,12 @@
     <div class="12u">
         <!-- header -->
         <section id="header">
-            <h1><a href="#">Team BBailey</a></h1>
+            <h1><a href="/index.html">Team BBailey</a></h1>
 
             <!-- nav -->
             <nav id="nav">
                 <ul>
-                    <li class="current_page_item"><a href="index.html">Home</a></li>
+                    <li class="current_page_item"><a href="{{ base.url }}/">Home</a></li>
                     <li><a href="#">Blog Posts</a></li>
                     <li><a href="#main-wrapper">My Story</a></li>
                     <li><a href="#footer-wrapper">What I stand for</a></li>
