--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,17 +7,20 @@
     <meta name="viewport" content="width=device-width">
 
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900,300italic" rel="stylesheet"/>
+    <link rel="stylesheet" href="{{ base.url }}/css/skel-noscript.css"/>
+    <link rel="stylesheet" href="{{base.url}}/css/style.css"/>
+    <link rel="stylesheet" href="{{ base.url }}/css/style-desktop.css"/>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.droptron.min.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/skel.min.js"></script>
-    <script src="js/skel-panels.min.js"></script>
+    <script src="{{ base.url }}/js/jquery.min.js"></script>
+    <script src="{{ base.url }}/js/jquery.dropotron.min.js"></script>
+    <script src="{{ base.url }}/js/config.js"></script>
+    <script src="{{ base.url }}/js/skel.min.js"></script>
+    <script src="{{ base.url }}/js/skel-panels.min.js"></script>
 
     <noscript>
-        <link rel="stylesheet" href="css/skel-noscript.css"/>
-        <link rel="stylesheet" href="css/style.css"/>
-        <link rel="stylesheet" href="css/style-desktop.css"/>
+        <link rel="stylesheet" href="{{ base.url }}/css/skel-noscript.css"/>
+        <link rel="stylesheet" href="{{base.url}}/css/style.css"/>
+        <link rel="stylesheet" href="{{ base.url }}/css/style-desktop.css"/>
     </noscript>
 
     <!--[if lte IE 8]/>
