--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -35,7 +35,18 @@
 	{
 		margin: 0 0 1.5em 0;
 	}
-	
+
+#post-wrapper
+{
+    min-height: 45em;
+    height: auto;
+    background: url('../images/me4.jpg');
+    background-repeat: no-repeat;
+    padding: 0;
+    background-position: center;
+    background-size: cover;
+}
+
 	footer
 	{
 		margin: 2.25em 0 0 0;
