--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ page.title }}</title>
-    <meta name="viewport" content="width=device-width">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900,300italic" rel="stylesheet"/>
+  <title>{{ page.title }}</title>
+
+  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900,300italic" rel="stylesheet"/>
+
+  {% if site.env == 'production' %}
+    <link rel="stylesheet" href="/build/style.min.css"/>
+  {% else %}
     <link rel="stylesheet" href="{{ base.url }}/css/skel-noscript.css"/>
     <link rel="stylesheet" href="{{base.url}}/css/style.css"/>
     <link rel="stylesheet" href="{{ base.url }}/css/style-desktop.css"/>
+  {% endif %}
 
-    <script src="{{ base.url }}/js/jquery.min.js"></script>
-    <script src="{{ base.url }}/js/jquery.dropotron.min.js"></script>
-    <script src="{{ base.url }}/js/config.js"></script>
-    <script src="{{ base.url }}/js/skel.min.js"></script>
-    <script src="{{ base.url }}/js/skel-panels.min.js"></script>
 
-    <noscript>
-        <link rel="stylesheet" href="{{ base.url }}/css/skel-noscript.css"/>
-        <link rel="stylesheet" href="{{base.url}}/css/style.css"/>
-        <link rel="stylesheet" href="{{ base.url }}/css/style-desktop.css"/>
-    </noscript>
+  <noscript>
+    <link rel="stylesheet" href="{{ base.url }}/css/skel-noscript.css"/>
+    <link rel="stylesheet" href="{{base.url}}/css/style.css"/>
+    <link rel="stylesheet" href="{{ base.url }}/css/style-desktop.css"/>
+  </noscript>
 
-    <!--[if lte IE 8]/>
-    <script src="js/html5shiv.js></script><link rel="stylesheet" href="css/ie8.css" />
-    <![endif]>-->
+  <!--[if lte IE 8]/>
+  <script src="js/html5shiv.js></script><link rel="stylesheet" href="css/ie8.css" />
+  <![endif]>-->
 
 </head>
 
@@ -33,13 +34,13 @@
 
 <!-- Header Wrapper -->
 <div id="header-wrapper">
-    <div class="container">
-      {%include header.html%}
-    </div>
+  <div class="container">
+    {%include header.html%}
+  </div>
 
-{% if page.url == '/index.html' %}
-    {%include hero.html%}
-{% endif %}
+  {% if page.url == '/index.html' %}
+  {%include hero.html%}
+  {% endif %}
 
 </div>
 <!-- header wrapper -->
@@ -47,6 +48,16 @@
 {{ content }}
 
 {%include footer.html%}
+
+{% if site.env == 'production'%}
+  <script src="/build/app.min.js"></script>
+{% else %}
+  <script src="{{ base.url }}/js/jquery.min.js"></script>
+  <script src="{{ base.url }}/js/jquery.dropotron.min.js"></script>
+  <script src="{{ base.url }}/js/config.js"></script>
+  <script src="{{ base.url }}/js/skel.min.js"></script>
+  <script src="{{ base.url }}/js/skel-panels.min.js"></script>
+{% endif %}
 
 </body>
 
