--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -40,7 +40,7 @@
 {
     min-height: 45em;
     height: auto;
-    background: url('../images/me4.jpg');
+    background: url('/images/me4.jpg');
     background-repeat: no-repeat;
     padding: 0;
     background-position: center;
