--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 @charset 'UTF-8';
 
-@font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
-
 /*
 	Dopetrope 2.5 by HTML5 UP
 	html5up.net | @n33co
@@ -26,7 +24,7 @@
 		font-family: 'Source Sans Pro';
 		font-weight: 300;
 		background: #252122;
-		background-image: url('../assets/images/bg02.png');
+		background-image: url('/images/bg02.png');
 		color: #5d5d5d;
 	}
 
@@ -207,7 +205,7 @@
 			display: inline-block;
 			width: 48px;
 			height: 48px;
-			background-image: url('../assets/images/icons48.png');
+			background-image: url('images/icons48.png');
 			text-indent: -9999px;
 		}
 		
@@ -227,7 +225,7 @@
 			display: inline-block;
 			width: 64px;
 			height: 64px;
-			background-image: url('../assets/images/icons64.png');
+			background-image: url('images/icons64.png');
 			text-indent: -9999px;
 		}
 		
@@ -1005,7 +1003,7 @@
 			top: 0;
 			left: 0;
 			width: 100%;
-			background: url('../assets/images/bg02.png');
+			background: url('/images/bg02.png');
 			z-index: 0;
 			opacity: 0.5;
 			box-shadow: inset 0px -60px 40px 0px #fff;
@@ -1018,7 +1016,7 @@
 			top: 0;
 			left: 0;
 			width: 100%;
-			background: url('../assets/images/bg01.png');
+			background: url('/images/bg01.png');
 			background-size: 100% 100%;
 			z-index: 0;
 			opacity: 0.25;
@@ -1033,7 +1031,7 @@
 	#main-wrapper
 	{
 		position: relative;
-		background: #f7f7f7 url('../assets/images/bg02.png');
+		background: #f7f7f7 url('/images/bg02.png');
 	}
 
 		#main-wrapper:before
@@ -1043,7 +1041,7 @@
 			top: 0;
 			left: 0;
 			width: 100%;
-			background: url('../assets/images/bg01.png');
+			background: url('/images/bg01.png');
 			background-size: 100% 100%;
 			z-index: 0;
 			opacity: 0.1;
@@ -1055,12 +1053,12 @@
 		
 			#main-wrapper .major h2
 			{
-				background: #f7f7f7 url('../assets/images/bg02.png');
+				background: #f7f7f7 url('/images/bg02.png');
 			}
 
     #post-wrapper
     {
-        background: url('../assets/images/bg01.png');
+        background: url('/images/bg01.png');
     }
 
 	#footer-wrapper
@@ -1076,7 +1074,7 @@
 			top: 0;
 			left: 0;
 			width: 100%;
-			background: url('../assets/images/bg01.png');
+			background: url('images/bg01.png');
 			background-size: 100% 100%;
 			z-index: 0;
 			opacity: 0.5;
