Working state droptron and jq implemented

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
                 <section>
                     <header>
                         <h2>What my site stands for?</h2>
-                        <a href="#" class="image image-full"><img src="images/pic_na.jpg" alt=""></a>
+                        <a href="#" class="image image-full"><img src="images/pic_10.jpg" alt=""></a>
 
                         <p>
                             This is a site that tries to represent Brandon Bailey as best it can.
