--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,19 +12,14 @@
   {% if site.env == 'production' %}
     <link rel="stylesheet" href="/build/style.min.css"/>
   {% else %}
-    <!--<link rel="stylesheet" href="{{ base.url }}/css/skel-noscript.css"/>-->
-    <!--<link rel="stylesheet" href="{{base.url}}/css/style.css"/>-->
-    <!--<link rel="stylesheet" href="{{ base.url }}/css/style-desktop.css"/>-->
   <link rel="stylesheet" href="/debug/main.css">
   <link rel="stylesheet" href="/debug/style.css">
+  <noscript>
+    <link rel="stylesheet" href="/debug/skel-noscript.css" />
+    <link rel="stylesheet" href="/debug/style.css" />
+    <link rel="stylesheet" href="/debug/style-desktop.css" />
+  </noscript>
   {% endif %}
-
-
-  <!--<noscript>-->
-    <!--<link rel="stylesheet" href="{{ base.url }}/css/skel-noscript.css"/>-->
-    <!--<link rel="stylesheet" href="{{base.url}}/css/style.css"/>-->
-    <!--<link rel="stylesheet" href="{{ base.url }}/css/style-desktop.css"/>-->
-  <!--</noscript>-->
 
   <!--[if lte IE 8]/>
   <script src="js/html5shiv.js></script><link rel="stylesheet" href="css/ie8.css" />
@@ -55,12 +50,8 @@
   <script src="/build/app.min.js"></script>
   
 {% else %}
+
 <script src="/debug/app.js"></script>
-  <!--<script src="{{ base.url }}/js/jquery.min.js"></script>-->
-  <!--<script src="{{ base.url }}/js/jquery.dropotron.min.js"></script>-->
-  <!--<script src="{{ base.url }}/js/config.js"></script>-->
-  <!--<script src="{{ base.url }}/js/skel.min.js"></script>-->
-  <!--<script src="{{ base.url }}/js/skel-panels.min.js"></script>-->
 {% endif %}
 
 </body>
