working, finds correct picture on $()ready, other minor changes

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -3,7 +3,7 @@
         <!-- banner -->
         <section id="banner">
             <a href="#">
-                <span class="image image-full"><img src="images/me2.jpg" alt=""></span>
+                <span class="image image-full"><img id="home-page-image" alt=""></span>
                 <header>
                     <span class="byline">A little insight into my world</span>
                 </header>
