WIP font awesome integration

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/build/style.min.css"/>
   {% else %}
   <link rel="stylesheet" href="/debug/main.css">
+  <link rel="stylesheet" href="/debug/font-awesome.css">
   <noscript>
     <link rel="stylesheet" href="/debug/skel-noscript.css" />
     <link rel="stylesheet" href="/debug/style.css" />
