--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -8,6 +8,14 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('font/fontawesome-webfont.eot');
+    src: url('font/fontawesome-webfont.eot') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff') format('woff'), url('fonts/fontawesome-webfont.ttf') format('truetype'), url('fonts/fontawesome-webfont.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 	body
 	{
 		font-size: 11pt;
@@ -40,7 +48,7 @@
 {
     min-height: 45em;
     height: auto;
-    background: url('/images/me4.jpg');
+    /*background: url('/images/me4.jpg');*/
     background-repeat: no-repeat;
     padding: 0;
     background-position: center;
