--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -238,7 +238,7 @@
 {
     /*min-height: 10em;*/
     height: auto;
-    background-image: url('/images/me3.jpg');
+    /*background-image: url('/images/me3.jpg');*/
     background-repeat:no-repeat;
     background-size: contain;
 
