--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,14 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('font/fontawesome-webfont.eot');
+    src: url('font/fontawesome-webfont.eot') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff') format('woff'), url('fonts/fontawesome-webfont.ttf') format('truetype'), url('fonts/fontawesome-webfont.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 	*
 	{
 		-moz-box-sizing: border-box;
@@ -24,7 +32,7 @@
 		font-family: 'Source Sans Pro';
 		font-weight: 300;
 		background: #252122;
-		background-image: url('/images/bg02.png');
+		/*background-image: url('/images/bg02.png');*/
 		color: #5d5d5d;
 	}
 
